bpo-45727: Make the syntax error for missing comma more consistent